--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -23,7 +23,9 @@
     "prettier"
   ],
   "rules": {
+    "no-underscore-dangle": "off",
     "prettier/prettier": "error",
+    "class-methods-use-this": "off",
     "import/extensions": [
       "error",
       "ignorePackages",
