--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "pg": "^8.3.0",
@@ -19,6 +20,7 @@
     "uuidv4": "^6.2.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.7",
     "@types/uuidv4": "^5.0.0",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
